# ChangeLog for dev-tex/xcolor
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.21 2007/03/13 00:39:08 nattfodd Exp $

  12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
  Replaced text-markup by tex as maintaining herd (text-markup split).

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  06 Feb 2006; Aron Griffis <agriffis@gentoo.org> xcolor-2.00-r1.ebuild:
  Mark 2.00-r1 stable on alpha

  08 Jan 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  xcolor-2.00-r1.ebuild:
  ppc stable, bug #116811

  31 Dec 2005; Simon Stelling <blubb@gentoo.org> xcolor-2.00-r1.ebuild:
  stable on amd64 per bug 116811

  26 Dec 2005; Mark Loeser <halcy0n@gentoo.org> xcolor-2.00-r1.ebuild:
  Stable on x86; bug #116811

  28 Nov 2005; Alexandre Buisse <nattfodd@gentoo.org> xcolor-1.11-r1.ebuild,
  xcolor-2.00-r1.ebuild:
  Back to ~arch.

*xcolor-2.00-r1 (28 Nov 2005)
*xcolor-1.11-r1 (28 Nov 2005)

  28 Nov 2005; Alexandre Buisse <nattfodd@gentoo.org> -xcolor-1.11.ebuild,
  +xcolor-1.11-r1.ebuild, -xcolor-2.00.ebuild, +xcolor-2.00-r1.ebuild:
  Added block of >=tetex-3.0 as this package is now part of tetex and the
  block was previously not mutual (bug #94815).

  27 Aug 2005; Fabian Groffen <grobian@gentoo.org> xcolor-2.00.ebuild:
  Marking ~ppc-macos (bug #81542)

  28 Dec 2004; Dylan Carlson <absinthe@gentoo.org> xcolor-2.00.ebuild:
  Stable on amd64.

  05 Oct 2004; Mamoru KOMACHI <usata@gentoo.org> -xcolor-1.10.ebuild,
  xcolor-1.11.ebuild, xcolor-2.00.ebuild:
  Added app-arch/unzip to DEPEND; bug #66375. Marked 2.00 stable on x86, alpha
  and ppc.

*xcolor-2.00 (19 Aug 2004)

  19 Aug 2004; Mamoru KOMACHI <usata@gentoo.org> -xcolor-1.09.ebuild,
  xcolor-1.11.ebuild, +xcolor-2.00.ebuild:
  Version bumped. Marked 1.11 stable on x86 and alpha. This closes bug #60803.

*xcolor-1.11 (13 Jun 2004)
