@@ -1,0 +1,3 @@
+MD5 61fbc00c086d7b6de69a4c69e9307ed2 xcolor211.zip 745959
+RMD160 2d90e40b9c04cd535a89fb538c3799c0e9229394 xcolor211.zip 745959
+SHA256 509cc5725339caa2ea5d2fe75cd69e96bb8b95ba2d8c1294ed6915c171c9ab3d xcolor211.zip 745959
