@@ -1,0 +1,34 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/xcolor-2.11.ebuild,v 1.1 2007/10/14 11:47:42 aballier Exp $
+
+inherit latex-package
+
+DESCRIPTION="xcolor -- easy driver-independent access to colors"
+HOMEPAGE="http://www.ukern.de/tex/xcolor.html"
+SRC_URI="http://www.ukern.de/tex/xcolor/ctan/${P//[.-]/}.zip"
+
+LICENSE="LPPL-1.2"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ppc ~ppc-macos ~sparc ~x86"
+
+IUSE=""
+
+RDEPEND="|| ( dev-texlive/texlive-latex
+	>=app-text/tetex-3.0 )"
+
+DEPEND="${RDEPEND}
+	app-arch/unzip"
+
+S="${WORKDIR}/${PN}"
+
+TEXMF="/usr/share/texmf-site"
+
+src_install() {
+
+	addwrite /var/cache/fonts/
+
+	latex-package_src_install || die
+
+	dodoc README ChangeLog
+}
