@@ -1,6 +1,11 @@
 # ChangeLog for dev-tex/xcolor
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.21 2007/03/13 00:39:08 nattfodd Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-tex/xcolor/ChangeLog,v 1.22 2007/10/14 11:47:42 aballier Exp $
+
+*xcolor-2.11 (14 Oct 2007)
+
+  14 Oct 2007; Alexis Ballier <aballier@gentoo.org> +xcolor-2.11.ebuild:
+  version bump, make use of texmf-site, depend on tex packages that support it
 
   12 Mar 2007; Alexandre Buisse <nattfodd@gentoo.org> metadata.xml:
   Replaced text-markup by tex as maintaining herd (text-markup split).
